# digestiflow-cli

./: .gitignore  .travis.yml  Cargo.toml  HISTORY.md  README.md
.github/workflows/: rust.yml
config/: default.toml
src/: cli.yaml  ingest.rs  main.rs  settings.rs
src/ingest/: api.rs  bcl_data.rs  bcl_meta.rs  mod.rs
